// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/Container Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container type-full is-playground"
  >
    <p
      style={
        Object {
          "color": "#ffffff",
          "fontSize": "18px",
        }
      }
    >
      I can't remember anything Can't tell if this is true or dream Deep down inside I feel the scream This terrible silence stops in me Now that the war is through with me I'm waking up, I cannot see That there is not much left of me Nothing is real but pain now Hold my breath as I wish for death Oh please, God, wake me
    </p>
  </div>
</div>
`;

exports[`Storyshots Layout/Container Types 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container type-full is-playground"
  >
    <p
      style={
        Object {
          "color": "#ffffff",
          "fontSize": "18px",
        }
      }
    >
      I can't remember anything Can't tell if this is true or dream Deep down inside I feel the scream This terrible silence stops in me Now that the war is through with me I'm waking up, I cannot see That there is not much left of me Nothing is real but pain now Hold my breath as I wish for death Oh please, God, wake me
    </p>
  </div>
  <div
    className="container type-withoutup is-playground"
  >
    <p
      style={
        Object {
          "color": "#ffffff",
          "fontSize": "18px",
        }
      }
    >
      I can't remember anything Can't tell if this is true or dream Deep down inside I feel the scream This terrible silence stops in me Now that the war is through with me I'm waking up, I cannot see That there is not much left of me Nothing is real but pain now Hold my breath as I wish for death Oh please, God, wake me
    </p>
  </div>
</div>
`;
